--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,26 @@ ul,ol,li {
 a {
 	text-decoration: none;
 }
+
+#vidGallery{
+	width:100%; 
+	padding:100px; 
+	 
+	article{
+		width:100%; 
+		border:1px solid #ccc; 
+		padding:30px; 
+		margin-bottom:30px; 
+		display:flex; 
+		justify-content:space-between; 
+		flex-wrap:wrap; 
+
+		a{
+			width:30%; 
+			img{ width:100%; }
+		}
+		.con{
+			width:65%; 
+		}
+	}
+}
