--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,3 +35,22 @@ a {
 		}
 	}
 }
+
+.pop {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: rgba(0,0,0,.9);
+	top: 0px; 
+	left: 0px;
+	padding: 5vw;
+
+	iframe {
+		width: 100%; 
+		height: 100%;
+	}
+
+	span {
+		position: absolute; top: 50px; right: 50px; color: #fff; cursor: pointer;
+	}
+}
