--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,9 +13,10 @@ a {
 	text-decoration: none;
 }
 
-#vidGallery{
+.vidGallery, .vidGallery2{
 	width:100%; 
 	padding:100px; 
+	border: 1px solid red;
 	 
 	article{
 		width:100%; 
