--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,52 @@ a {
 	text-decoration: none;
 }
 
-.vidGallery, .vidGallery2{
+.vidGallery {
+	padding: 100px;
+
+	&::after {
+		content: ""; display: block; clear: both;
+	}
+
+	article {
+		width: 32%; float: left; margin-right: 2%; border: 1px solid #555; margin-bottom: 40px;
+
+		a {
+			display: block; width: 100%; height: 180px; overflow: hidden; background: #000;
+
+			img {
+				width: 100%; height: 100%; object-fit: cover; transform: scale(1.6);
+				filter: grayscale(1); transition: 0.5s;
+			}	
+		}
+
+		.con {
+			width: 100%; height: 200px; padding: 20px; position: relative;
+
+			h2 {
+				font: bold 14px/1 "맑은 고딕", "arial"; color: #555; margin-bottom: 15px; transition: 0.5s;
+			}
+			p {
+				font: 11px/1.2 "맑은 고딕", "arial"; color: #888;
+			}
+			span {
+				font: bold 12px/1 "arial"; color: orange; position: absolute; bottom: 20px; left: 20px;
+			}
+		}
+		&:hover {
+			h2 {
+				color: orange;
+			}
+			a {
+				img {
+					transform: scale(2); filter: grayscale(0);
+				}
+			}			
+		}
+	}
+}
+
+.vidGallery2{
 	width:100%; 
 	padding:100px; 
 	border: 1px solid red;
