--- a/css/style.css
+++ b/css/style.css
@@ -17,49 +17,57 @@ a {
     content: "";
     display: block;
     clear: both; }
-  .vidGallery article {
+  .vidGallery article:not(:first-child) {
     width: 32%;
     float: left;
     margin-right: 2%;
     border: 1px solid #555;
-    margin-bottom: 40px; }
-    .vidGallery article a {
+    margin-bottom: 40px;
+    position: relative;
+    overflow: hidden; }
+    .vidGallery article:not(:first-child):nth-of-type(4) {
+      margin-right: 0%; }
+    .vidGallery article:not(:first-child) a {
       display: block;
       width: 100%;
-      height: 180px;
+      height: 280px;
       overflow: hidden;
       background: #000; }
-      .vidGallery article a img {
+      .vidGallery article:not(:first-child) a img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transform: scale(1.6);
+        transform: scale(1.8);
         filter: grayscale(1);
         transition: 0.5s; }
-    .vidGallery article .con {
+    .vidGallery article:not(:first-child) .con {
       width: 100%;
-      height: 200px;
+      height: 280px;
       padding: 20px;
-      position: relative; }
-      .vidGallery article .con h2 {
+      position: absolute;
+      top: 100%;
+      left: 0px;
+      background: rgba(0, 0, 0, 0.8);
+      transition: 0.5s; }
+      .vidGallery article:not(:first-child) .con h2 {
         font: bold 14px/1 "맑은 고딕", "arial";
-        color: #555;
+        color: #fff;
         margin-bottom: 15px;
         transition: 0.5s; }
-      .vidGallery article .con p {
+      .vidGallery article:not(:first-child) .con p {
         font: 11px/1.2 "맑은 고딕", "arial";
-        color: #888; }
-      .vidGallery article .con span {
+        color: #ddd; }
+      .vidGallery article:not(:first-child) .con span {
         font: bold 12px/1 "arial";
         color: orange;
         position: absolute;
         bottom: 20px;
         left: 20px; }
-    .vidGallery article:hover h2 {
-      color: orange; }
-    .vidGallery article:hover a img {
+    .vidGallery article:not(:first-child):hover a img {
       transform: scale(2);
       filter: grayscale(0); }
+    .vidGallery article:not(:first-child):hover .con {
+      top: 0%; }
 
 .vidGallery2 {
   width: 100%;
