--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,40 +20,47 @@ a {
 		content: ""; display: block; clear: both;
 	}
 
-	article {
+	article:not(:first-child) {	
+		
+		&:nth-of-type(4) {margin-right: 0%;}
+		
 		width: 32%; float: left; margin-right: 2%; border: 1px solid #555; margin-bottom: 40px;
+		position: relative; overflow: hidden;
 
 		a {
-			display: block; width: 100%; height: 180px; overflow: hidden; background: #000;
+			display: block; width: 100%; height: 280px; overflow: hidden; background: #000;
 
 			img {
-				width: 100%; height: 100%; object-fit: cover; transform: scale(1.6);
+				width: 100%; height: 100%; object-fit: cover; transform: scale(1.8);
 				filter: grayscale(1); transition: 0.5s;
 			}	
 		}
 
 		.con {
-			width: 100%; height: 200px; padding: 20px; position: relative;
+			width: 100%; height: 280px; padding: 20px; position: absolute; top: 100%; left: 0px;
+			background: rgba(0,0,0,.8); transition: 0.5s;
 
 			h2 {
-				font: bold 14px/1 "맑은 고딕", "arial"; color: #555; margin-bottom: 15px; transition: 0.5s;
+				font: bold 14px/1 "맑은 고딕", "arial"; color: #fff; margin-bottom: 15px; transition: 0.5s;
 			}
 			p {
-				font: 11px/1.2 "맑은 고딕", "arial"; color: #888;
+				font: 11px/1.2 "맑은 고딕", "arial"; color: #ddd;
 			}
 			span {
 				font: bold 12px/1 "arial"; color: orange; position: absolute; bottom: 20px; left: 20px;
 			}
 		}
 		&:hover {
-			h2 {
-				color: orange;
-			}
+			
 			a {
 				img {
 					transform: scale(2); filter: grayscale(0);
 				}
-			}			
+			}	
+			
+			.con {
+				top: 0%;
+			}
 		}
 	}
 }
