--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,9 @@ a {
 
 			h2 {
 				font: bold 14px/1 "맑은 고딕", "arial"; color: #fff; margin-bottom: 15px; transition: 0.5s;
+				cursor: pointer;
+
+				&:hover {color: orange;}
 			}
 			p {
 				font: 11px/1.2 "맑은 고딕", "arial"; color: #ddd;
